--- a/pom.xml
+++ b/pom.xml
@@ -31,6 +31,14 @@
             <scope>test</scope>
         </dependency>
 
+        <dependency>
+            <groupId>com.typesafe.play</groupId>
+            <artifactId>play-json_2.11</artifactId>
+            <version>2.6.0-M1</version>
+        </dependency>
+
+
+
     </dependencies>
 
     <build>
