Added new functions!

--- a/pom.xml
+++ b/pom.xml
@@ -36,7 +36,12 @@
             <artifactId>play-json_2.11</artifactId>
             <version>2.6.0-M1</version>
         </dependency>
-
+        <dependency>
+            <groupId>junit</groupId>
+            <artifactId>junit</artifactId>
+            <version>RELEASE</version>
+            <scope>test</scope>
+        </dependency>
 
 
     </dependencies>
